# ce-hub

./:  portfolio.html  .env.production  .gitignore  .last-validation.json  .mcp.json  00_INDEX_VIDEO_TRANSCRIPTION_PACKAGE.md  ADVANCED_ENERGY_PRODUCTS_RESEARCH_REPORT.md  AGENT_ARCHITECTURE_PATTERNS.md  AGENT_BUILDER_WORKING.md  AGENT_BUILDING_QUICK_REFERENCE.md  AGENT_BUILDING_RESEARCH_COMPENDIUM.md  AGENT_INTEGRATION_GUIDE.md  AGENT_QUICK_REFERENCE.md  AGENT_RESEARCH_QUICK_SUMMARY.md  AI_AGENT_RESEARCH_COMPENDIUM.md  ARCHITECTURE_QUICK_START.md  AZYR_QUIZ_IMPLEMENTATION_PLAN.md  BACKSIDE_B_CHANGELOG_V23_TO_V30.md  BACKSIDE_B_HYBRID_GUIDE.md  BACKSIDE_B_SCANNER_COMPLETE_RESOLUTION_SUMMARY.md  BACKSIDE_B_SCANNER_COMPLETE_SOLUTION.md  BACKSIDE_PARA_B_FIXES_EXPLAINED.md  Backside_B_scanner_v31_FINAL.py  CEHUB_ORGANIZATION_FINAL.md  CE_HUB_ENHANCEMENT_PLAN.md  CE_HUB_MASTER_ORCHESTRATOR_PLAN.md  CE_HUB_REORGANIZATION_PLAN.md  CE_HUB_REVITALIZATION_COMPLETE.md  CE_HUB_STRATEGIC_TRANSFORMATION_PLAN.md  CE_HUB_TRANSFORMATION_VISUAL.md  CHANGELOG.md  CLAUDE-MUST-VALIDATE.md  CLAUDE.md  CLEANUP_COMPLETE.md  COLES_GOLD_STANDARD_COMPLETE.md  COLES_PRACTICES_GUIDE.md  COMPLETE_INTEGRATION_GUIDE.md  COMPREHENSIVE_ADD_TO_PROJECT_VALIDATION_REPORT.md  CONDUCTOR_START_PROMPT.md  COPY_PASTE_TEMPLATES.md  (+376 more)
PAST_EDGE_DEV_WORK/edge-dev-backup-20251125_015343/pydantic-ai-service/: pyproject.toml
PAST_EDGE_DEV_WORK/edge-dev-backup-20251125_015343/pydantic-ai-service/app/agents/: base_agent.py
PAST_EDGE_DEV_WORK/edge-dev-backup-20251125_015343/pydantic-ai-service/app/models/: schemas.py
(+5554 files in other folders)
