[tool.poetry]
name = "edge-dev-trading-agent"
version = "0.1.0"
description = "PydanticAI-powered trading agent for enhanced scan creation and backtest workflows"
authors = ["EdgeDev Team <team@edge.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-ai = "^0.0.14"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pandas = "^2.1.4"
numpy = "^1.25.2"
yfinance = "^0.2.28"
ta = "^0.10.2"
openai = "^1.3.8"
anthropic = "^0.40.0"
pydantic-settings = "^2.0.0"
griffe = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true